--- a/css/stel.css
+++ b/css/stel.css
@@ -7,6 +7,9 @@
     padding: 0;
     font-family: 'Roboto', sans-serif;
 }
+body{
+  
+}
 .flex{
     display: flex;
     align-items: center;
@@ -44,7 +47,7 @@ li{
     font-size: 14px;
 }
 .logo{
-   
+    
 }
 .logo img {
     padding: 20px 20px 20px 0;
@@ -75,9 +78,9 @@ li{
     line-height: 16px;
 }
 .header_bottom {
-    border-bottom: 2px solid #EFEFEF;
+    border-bottom: 2px solid #E5E5E5;
 }
-.nav {
+.nav {       
     justify-content: center;
     margin: 30px 0;
 }
@@ -89,13 +92,40 @@ li{
     line-height: 19px;
 }
 .baner {
+    background: #66C05D;
     height:604px;
     background-image: url(../img/background.png);
     background-repeat: no-repeat;
     background-position: center center;
     padding-top: 150px;
     padding-bottom: 150px;
+    color: #FFFFFF;
     
+}
+.baner h1 {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 56px;
+    margin-bottom: 50px;
     
-    
+}
+.baner P {
+    max-width: 308px;
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 60px;
+}
+.baner a{
+    margin-top: 50px;
+    color: #FFFFFF;
+    background: #66C05D;
+    border: 2px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 40px;
+    padding: 12px 45px;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.05em;
 }
