--- a/css/stel.css
+++ b/css/stel.css
@@ -8,7 +8,7 @@
     font-family: 'Roboto', sans-serif;
 }
 body{
-  
+    background: #EFEFEF;
 }
 .flex{
     display: flex;
@@ -79,10 +79,16 @@ li{
 }
 .header_bottom {
     border-bottom: 2px solid #E5E5E5;
+    background: #ffffff;
+}
+header{
+    background: #ffffff;
+
 }
 .nav {       
     justify-content: center;
     margin: 30px 0;
+    
 }
 .nav a {
     padding: 20px;
@@ -129,3 +135,87 @@ li{
     text-align: center;
     letter-spacing: 0.05em;
 }
+.title{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+    color: #000000;
+    margin-top: 80px;
+    margin-bottom:40px
+}
+.box{
+    width: 255px;
+    height: 363px;
+    background: #FFFFFF;
+    
+}
+.box img {
+    padding: 25px 65px 0 65px;
+}
+.box p{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    padding:  20px 30px;
+    color: #333333;
+ }
+.box h2 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 21px;
+    line-height: 25px;
+    text-align: center;
+    letter-spacing: 0.05em;
+    color: #000000;
+}
+.btn {
+    text-align:center;
+    margin-top: 25px;
+}
+.btn a {
+    background: #66C05D;
+    border-radius: 30px;
+    padding: 9px 40px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.05em;
+}
+.goods{
+    display: flex;
+    justify-content: space-between;
+   
+}
+.box_bottom {
+    width: 530px;
+    height: 212px;
+    left: 405px;
+    top: 1463px;
+    background: #66C05D  
+}
+.bottom {
+    display: flex;
+    justify-content: space-between;
+}
+.titele_botom {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 21px;
+    color: #FFFFFF;
+    padding-top: 35px;
+    padding-left: 40px;
+}
+.box_bottom p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    color: #FFFFFF;
+}
+
+  
