--- a/css/stel.css
+++ b/css/stel.css
@@ -46,9 +46,7 @@ li{
     font-weight: 400;
     font-size: 14px;
 }
-.logo{
-    
-}
+
 .logo img {
     padding: 20px 20px 20px 0;
 }
@@ -67,7 +65,12 @@ li{
 .nomer{
     font-size: 16px;
     line-height: 19px;
-    
+}
+.nomer a {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
 }
 .qayta_aloqa a {
     margin-left: 40px ;
@@ -184,6 +187,7 @@ header{
     font-size: 14px;
     line-height: 16px;
     letter-spacing: 0.05em;
+    color: #fff;
 }
 .goods{
     display: flex;
@@ -195,7 +199,9 @@ header{
     height: 212px;
     left: 405px;
     top: 1463px;
-    background: #66C05D  
+    background: #66C05D;  
+    margin-bottom:133px;
+    margin-top: 100px;
 }
 .bottom {
     display: flex;
@@ -211,11 +217,107 @@ header{
     padding-left: 40px;
 }
 .box_bottom p {
+    max-width: 231px ;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 20px;
     color: #FFFFFF;
+    padding-top: 25px;
+    margin-left: 40px;
+    padding-bottom: 25px;
 }
+input{
+    margin-left: 40px;
+    padding:9px 40px 9px 25px ;
+    background: #FFFFFF;
+    border-radius: 30px;
+    border:none;
+    margin-bottom: 35px;
+}
+.bottom img {
+   margin-left: 55px;
+}
+.text2{
+    margin-bottom: 6px;
+    font-size: 14px;
+    line-height: 20px;
+    color: #FFFFFF;
+}
+.btnn{
+    border: 2px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 30px;
+    margin-left: 40px;
+    padding: 8px 29px;
+    color: #fff;
+}
+footer{
+    background: #ffffff;
+}
+.footer_bottomm{
+    padding: 20px 0;
+    background: #EFEFEF;
+}
+.footer_bottom{
+    display: flex;
+    justify-content: space-between;
+   
+}
+.footer_bottom p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    color: #828282;
+}
+.footer_bottom a {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    color: #828282;
+}
+.footer_item {
+    display: flex;
+}
+.social-item {
+    margin-right: 20px;
+    margin-top:38px;
+    margin-bottom: 38px;
+   
+}   
 
-  
+.social-link {
+    display: block;
+    width: 45px;
+    height: 45px;
+    border: 2px solid #66C05D;
+    border-radius:50%;
+    background-repeat:no-repeat;
+    background-position: center center;
+   
+}
+.Youtube {
+    background-image: url(../img/yotube.png);
+}
+.vk{
+    background-image: url(../img/Group.png);
+}
+.fb{
+    background-image: url(../img/facebook.png);
+}
+.instagram{
+    background-image: url(../img/instagram.png);
+}
+.footer_top{
+    display: flex;
+    align-items:center;
+    justify-content: space-between;
+}
+.footer_top p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+}
